<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context="com.breno.tokenlabfilmes.view.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_infos_detailed_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/container_error_detailed_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_wifi_off_24">

                </ImageView>

                <TextView
                    android:id="@+id/text_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/error"
                    android:textColor="@color/white"
                    android:textSize="40dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_wait_detailed_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wait"
                    android:textColor="@color/white"
                    android:textSize="50dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_detailed_film"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/poster_detailed_movie"
                android:layout_width="@dimen/cardW"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:background="@drawable/exemplo">

            </ImageView>

            <TextView
                android:id="@+id/movie_detailed_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Titulo"
                android:textColor="@color/white"
                android:textSize="30dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">



                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/ic_book_open_page_variant_outline">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center|center_vertical"
                        android:text="@string/overview"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:id="@+id/movie_detailed_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/ic_movie_open">

                    </ImageView>

                    <TextView
                        android:id="@+id/movie_detalied_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/genres"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/ic_timer_sand_complete">

                    </ImageView>

                    <TextView
                        android:id="@+id/movie_detalied_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/runtime"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/ic_star_white">

                    </ImageView>

                    <TextView
                        android:id="@+id/movie_detalied_vote_average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/vote_average"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/ic_account_star_outline">

                    </ImageView>

                    <TextView
                        android:id="@+id/movie_detalied_vote_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/vote_count"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/ic_calendar_range">

                    </ImageView>

                    <TextView
                        android:id="@+id/movie_detalied_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>

